--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,28 @@
             <version>20140107</version>
         </dependency>
 
+        <!-- commons IO: CommonsMultipartResolver -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+
+        <!-- commons fileupload: CommonsMultipartResolver -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+
+        <!-- commons codec: CommonsMultipartResolver -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
