--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
             <version>1.10</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.0</version>
+        </dependency>
 
     </dependencies>
 
