--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,13 @@
             <version>2.8.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.google.maps/google-maps-services -->
+        <dependency>
+            <groupId>com.google.maps</groupId>
+            <artifactId>google-maps-services</artifactId>
+            <version>0.1.17</version>
+        </dependency>
+
     </dependencies>
 
     <build>
